<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">议员</string>
    <string name="menu_create">新建</string>
    <string name="menu_finish">完成</string>
    <string name="menu_share">分享</string>
    <string name="menu_delete">删除</string>
    
    <string name="add_location">添加</string>
    
    <string name="agenda_today">TODAY, %1$s</string>
    <string name="agenda_yesterday">YESTERDAY, %1$s</string>
    <string name="agenda_tomorrow">TOMORROW, %1$s</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_at_time_fmt">Today at %s</string>
    <string name="tomorrow_at_time_fmt">Tomorrow at %s</string>
    <string name="date_time_fmt" formatted="false">%s, %s</string>
    <string name="no_title_label">(No title)</string>
    <string name="event_create">"New event"</string>
    <string name="day_view_new_event_hint">+ New event</string>
	<string name="new_event_dialog_label">"New event"</string>
	<string name="new_event_dialog_option">"New event"</string>
	<string name="template_announce_item_index">Event</string>
	
	
    <string name="agenda_list">当前日期没有会议</string>
    <string name="done">完成并邀请与会者</string>
    <string name="cancel">放弃</string>
    
    <string name="share">分享</string>
    <string name="meeting_request">会议邀请</string>
    <string name="meeting_create">新建会议</string>
    <string name="meeting_detail">会议详情</string>
    
    <string name="meet_req_failed">会议接收失败</string>
    
    <string name="format_month">%1$d月</string>
    <string name="format_year">%1$d年</string>
    
    <string name="label_start_date">开始:</string>
     <string name="label_end_date">结束:</string>
    <string name="label_time">时间</string>
    <string name="label_remind">提醒:</string>
    
    <string name="meet_remind">会议提醒</string>
    <string name="remind_ok">知道了</string>
    
      <string name="float_tittle">今日剩余会议</string>
    
  
    <string name="label_topic">主题:</string>
    <string name="label_location">地点:</string>
    
    <string name="meet_topic">会议标题：（默认开会）</string>
    <string name="meet_loc">公司</string>
    <string name="meet_remind_time">15分钟前</string>
    
    <string name="setting">设置</string>
     <string name="float_switch">悬浮窗</string>
      <string name="float_edge_switch">边缘吸附</string>
     <string name="edit_location">修改常用会议地点列表</string>
     <string name="share_qq">分享应用到qq</string>
    <string name="about">关于</string>

    <string name="open">open drawer</string>
    <string name="close">close drawer</string>
    
</resources>