<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@drawable/calendar_sub_item_back_ground_top_highlight"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/float_tittle"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/calendar_sub_item_back_ground_middle_float" >
        
                <TextView
            android:id="@+id/noMeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/agenda_list"
            android:textColor="#000000"
            android:textSize="20dp" />

        <ListView
            android:id="@+id/float_list"
            android:layout_width="252dp"
            android:layout_height="167dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:padding="10dp" >
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/calendar_sub_item_back_ground_bottom_float"
        android:orientation="vertical" >

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_normal_selector"
            android:text="@string/remind_ok"
            android:textColor="#000000" />
    </RelativeLayout>

</LinearLayout>