<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group_bg_repeat"
    android:orientation="vertical" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/toolbar_new_meet_layout">
    <include layout="@layout/actionbar_new_meeting"/>
</RelativeLayout>

    <!-- CALENDARS SELECTOR for new events -->

    <EditText
        android:id="@+id/topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/text_field"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/meet_topic"
        android:inputType="textAutoCorrect|textCapSentences|"
        android:minHeight="48dip"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textSize="@dimen/edit_title_size"
        android:layout_below="@+id/toolbar_new_meet_layout"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/topic"
        android:layout_below="@+id/topic"
        android:layout_marginTop="10dp"
        android:background="@drawable/calendar_sub_item_back_ground_top"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/startTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label_start_date"
            android:textSize="@dimen/edit_title_size" />

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <Button
                android:id="@+id/date"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/view_gap"
                android:background="@null"
                android:textSize="@dimen/edit_word_size" />

            <ImageView
                android:id="@+id/ImageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/date"
                android:focusable="false"
                android:src="@drawable/secletor_setting_item_arrow" />

            <ImageView
                android:id="@+id/ImageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:focusable="false"
                android:src="@drawable/secletor_setting_item_arrow" />

            <Button
                android:id="@+id/time"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/ImageView2"
                android:background="@null"
                android:textSize="@dimen/edit_word_size" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:background="@drawable/calendar_sub_item_back_ground_bottom"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/endTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label_end_date"
            android:textSize="@dimen/edit_title_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/end_date"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/view_gap"
                android:background="@null" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/end_date"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/end_date"
                android:focusable="false"
                android:src="@drawable/secletor_setting_item_arrow" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/imageView3"
                android:focusable="false"
                android:src="@drawable/secletor_setting_item_arrow" />

            <Spinner
                android:id="@+id/end_time"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@+id/imageView4"
                android:background="@null" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginTop="10dp"
        android:background="@drawable/calendar_sub_item_back_ground_single"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/label_location"
            android:textSize="@dimen/edit_title_size" />

        <Spinner
            android:id="@+id/location"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/location_pic"
            android:background="@null"
            android:focusable="true"
            android:minHeight="48dip" />

        <ImageView
            android:id="@+id/location_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/editLocation"
            android:focusable="false"
            android:src="@drawable/secletor_setting_item_arrow" />

        <Button
            android:id="@+id/editLocation"
            android:layout_width="36dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/plus_increase_button_selector" />

        <TextView
            android:id="@+id/topicTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/label_topic"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/contextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/topicTextView"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="4dp"
            android:paddingBottom="20dp"
            android:text="@string/label_topic"
            android:textSize="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="10dp"
        android:background="@drawable/calendar_sub_item_back_ground_single"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/remindTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/label_remind"
            android:textSize="@dimen/edit_title_size" />

        <Spinner
            android:id="@+id/remind_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/remind_time_pic"
            android:background="@null"
            android:entries="@array/reminder_minutes_opt"
            android:gravity="right" />

        <ImageView
            android:id="@+id/remind_time_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:focusable="false"
            android:src="@drawable/secletor_setting_item_arrow" />
    </RelativeLayout>

</RelativeLayout>